// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildCompoundId > should handle numeric PK values 1`] = `42`;

exports[`buildCompoundId > should handle undefined values in compound PK 1`] = `
{
  "a": "val",
  "b": undefined,
}
`;

exports[`buildCompoundId > should return compound object with sorted keys for composite PK 1`] = `
{
  "tenantId": "t1",
  "userId": "u1",
}
`;

exports[`buildCompoundId > should return value directly for single PK 1`] = `"abc-123"`;

exports[`buildCompoundId > should sort keys alphabetically regardless of input order 1`] = `
{
  "a": 1,
  "m": 2,
  "z": 3,
}
`;

exports[`buildIdFilter > should wrap compound PK in _id filter 1`] = `
{
  "_id": {
    "tenantId": "t1",
    "userId": "u1",
  },
}
`;

exports[`buildIdFilter > should wrap single PK in _id filter 1`] = `
{
  "_id": "abc",
}
`;
